# chic-pake-rust

./: Cargo.toml  README.md  THIRD_PARTY_LICENSES
src/: api.rs  chic.rs  ekekem.rs  error.rs  lib.rs  params.rs  rng.rs  symmetric.rs
src/hic/: mod.rs  sha256.rs  sha256_nostd.rs  sha512.rs  sha512_nostd.rs  utils.rs
src/hic/ic/: constants.rs  errors.rs  mod.rs  rijndael.rs
src/reference/: cbd.rs  fips202.rs  indcpa.rs  mod.rs  ntt.rs  poly.rs  polyvec.rs  reduce.rs
