[package]
name = "chic-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6.4",  default-features = false }
sha2 = { version = "0.10.8", optional = true, default-features = false}
kyber_asm = { git = "ssh://git@github.com/esquivel71/kyber_asm_rust.git", branch = "main", default-features = false, optional = true }

[target.'cfg(target_os = "none")'.dependencies]
pqc_kyber = { version = "0.7.1", optional = true }

[target.'cfg(not(target_os = "none"))'.dependencies]
pqc_kyber = { version = "0.7.1", features = ["std"], optional = true }


[dev-dependencies]
rand = "0.8.5"
pqc_kyber = { version= "0.7.1", features = ["std"] }
libcrux = { git = "https://github.com/cryspen/libcrux.git", branch = "main" }

[features]
default = ["use_kyber768"]
use_kyber512  = []
use_kyber768  = []
use_kyber1024 = []
libjade_sha = ["dep:kyber_asm"]

# Enable std library support
std = []

# Enable SHA2 (if not specified it will use SHA3)
sha2 = ["dep:sha2"]

# Enable API functions that use default Kyber implementation (from Argyle Software)
default-kyber = ["dep:pqc_kyber"]
